# titan-eye

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: cesium_globe.py  demo_data.py  streamlit_app.py
docs/: index.html  sources.md
docs/adr/: 0000-long-term-vision.md  0001-planes-architecture.md  0002-public-data-sources.md  0003-uncertainty-and-no-intent.md  0004-cesium-visualization.md  0005-content-addressable-provenance.md  0006-data-immutability.md  0007-apache-license.md  0008-storage-duckdb-parquet.md  0009-aerial-ingestion-v01.md  0010-orbital-sgp4-v01.md  0011-suborbital-ballistic-v01.md  0012-surface-conflict-heatmap-v01.md  0013-situation-case-v01.md  0014-multidomain-proximity-v01.md  0015-maritime-ais-v01.md  0016-tension-index-alerts-v01.md  0017-installations-reference-v01.md  0018-country-type-filter-v01.md  0019-historical-timeline-v01.md  0020-osint-news-layer-v01.md  0021-country-profiles-alliances-v01.md  README.md  template.md
docs/architecture/: planes.md  roadmap.md
docs/cesium/: index.html
samples/: ballistic_report_example.json  orbital_military_tles.json
src/titan_eye/: __init__.py
src/titan_eye/analytics/: __init__.py  filtering.py  intelligence.py  military_filter.py  proximity.py  timeline.py
src/titan_eye/analytics/ballistic/: __init__.py  reconstruct.py
src/titan_eye/analytics/propagation/: __init__.py  frames.py  sgp4_propagator.py
src/titan_eye/analytics/surface/: __init__.py  heatmap.py
src/titan_eye/catalog/: __init__.py  aircraft.py  aircraft_states_repo.py  ballistic.py  ballistic_repo.py  conflict_events_repo.py  country.py  country_repo.py  installations.py  installations_repo.py  maritime.py  orbital.py  orbital_elements_repo.py  osint.py  osint_repo.py  surface.py  vessel_positions_repo.py
src/titan_eye/catalog/normalizers/: __init__.py  ais.py  ballistic_report.py  conflict_events.py  country.py  gdelt_doc.py  gdelt_events.py  installations.py  opensky_states.py  osint.py  overpass.py  tle.py
src/titan_eye/core/: __init__.py  domains.py  epistemics.py  errors.py  identity.py  timebase.py
src/titan_eye/ingestion/: __init__.py  artifact.py  cache.py  transport.py
src/titan_eye/ingestion/sources/: __init__.py  aisstream.py  celestrak.py  gdelt.py  gdelt_events.py  local_report.py  opensky.py  overpass.py
src/titan_eye/orchestration/: __init__.py  cli.py  globe_payload.py  ingest_pipeline.py
src/titan_eye/provenance/: __init__.py  integrity.py  situation_case.py
tests/: __init__.py
tests/unit/: fixtures_ais.py  fixtures_ballistic.py  fixtures_country.py  fixtures_installations.py  fixtures_opensky.py  fixtures_osint.py  fixtures_surface.py  fixtures_tle.py  test_aisstream.py  test_ballistic.py  test_country.py  test_domains.py  test_filtering.py  test_gdelt.py  test_gdelt_events.py  test_globe_payload_and_cli.py  test_identity.py  test_ingestion.py  test_installations.py  test_intelligence.py  test_maritime.py  test_military_filter.py  test_normalize_opensky.py  test_orbital.py  test_osint.py  test_overpass.py  test_persistence_integrity.py  test_proximity.py  test_situation_case.py  test_surface.py  test_timeline.py
