[project]
name = "titan-eye"
version = "0.0.1"
description = "Verifiable detection registry for orbital, suborbital, aerial and surface military-relevant events, built exclusively from public data with declared uncertainty."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Titan Eye Contributors" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pydantic >=2.7,<3",
    "duckdb >=1.0,<2",
    "pyarrow >=15,<20",
    # IANA tz database. Requerida en Windows porque Python no la trae nativa;
    # DuckDB/PyArrow la consultan al materializar timestamps con tz (ADR-0013).
    "tzdata; sys_platform == 'win32'",
    # Motor SGP4 para el dominio orbital (satélites militares/dual-use).
    # Port Python del Fortran de Vallado. Mismo motor que Orbital Sentinel.
    "sgp4 >=2.20,<3",
]

[project.optional-dependencies]
dev = [
    "pytest >=8,<9",
    "pytest-cov >=5",
    "ruff >=0.4",
    "mypy >=1.10",
    "matplotlib >=3.7,<4",
]
# Visualización 2D estática (trayectorias, mapas de eventos). Extra opcional,
# no dependencia del núcleo.
viz = [
    "matplotlib >=3.7,<4",
]
# Frontend interactivo (Streamlit + globo Cesium embebido). Extra opcional;
# el núcleo funciona sin él (CLI / API).
app = [
    "streamlit >=1.35,<2",
    "pandas >=2,<3",
]

[project.scripts]
titan-eye = "titan_eye.orchestration.cli:cli_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/titan_eye"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PL"]
ignore = [
    "PLR0913",  # too-many-arguments — APIs kwargs-only intencionales
    "PLR2004",  # magic-value-comparison — abundan en tests con literales esperados
    "RUF001",   # ambiguous-string — α, σ, etc. intencionales en física
    "RUF002",
    "RUF003",
    "PLC0415",  # import-outside-top-level — lazy imports deliberados
    "UP042",    # str-enum — usamos el patrón explícito `class X(str, Enum)` (igual que el hermano)
    "PLR0911",  # too-many-returns — el router de la CLI es un dispatch lineal plano
    "PLR0912",  # too-many-branches — ensamblado lineal multidominio del panel
    "PLR0915",  # too-many-statements — páginas Streamlit y flujos lineales
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017", "RUF059"]
# app/ es la capa de presentación: HTML/CSS/JS embebido y literales de demo,
# donde el límite de 100 columnas es impráctico (ADR-0004). El núcleo en src/
# sí lo respeta.
"app/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]
markers = [
    "requires_secret(service): test que requiere credencial (se omite en CI público)",
    "requires_network(service): test que toca red real (se omite por defecto)",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pyarrow.*", "sgp4.*", "matplotlib", "matplotlib.*"]
ignore_missing_imports = true
